--- a/config/Diffusion.yaml
+++ b/config/Diffusion.yaml
@@ -12,12 +12,27 @@ generation:
   actions_count: 5
 
 edm:
-  p_mean: -1.2
+  # Noise schedule for training (log-normal)
+  p_mean: -0.4
   p_std: 1.2
+
+  # Data scaling
   sigma_data: 0.5
+
+  # Karras schedule and sampler settings
   sigma_min: 0.002
-  sigma_max: 80
+  sigma_max: 5.0
   rho: 7
+  order: 1            # 1: Euler, 2: Heun
+  s_churn: 0.0
+  s_tmin: 0.0
+  s_tmax: .inf
+  s_noise: 1.0
+
+  # Stability tweaks
+  sigma_offset_noise: 0.0
+  quantize_output: true
+
   unet:
     __type__: models.gen.blocks.UNetConfig
     steps: [2, 2, 2, 2]
